# millivis

./: .gitignore  CMakeLists.txt  COMPILING  Doxyfile  Jamfile  Jamrules  LICENSE  README.md  debug_font.cpp  file_types.txt  glut.patch  test_new_font.cpp
bench/: CMakeLists.txt  Jamfile  disp_lines.cpp  raw_disp_rect.cpp  raw_filter.cpp
doc/: GLFW_MIGRATION.md  Thumbs.db  file_types_kernel.txt  index.html
focusimage/: CMakeLists.txt  Jamfile  focusimage.cpp
geometric/: CMakeLists.txt  Jamfile  geometric.hpp  strips.hpp  test_geometric.cpp
infovis/: CMakeLists.txt  Jamfile  alloc.hpp  alloc.hpp.in  config.hpp.in  gc_alloc.hpp  infovis.hpp
infovis/drawing/: Animate.cpp  Animate.hpp  AnimateBoxList.cpp  AnimateBoxList.hpp  AnimateCompose.cpp  AnimateCompose.hpp  AnimateInverse.cpp  AnimateInverse.hpp  CMakeLists.txt  FONT_SYSTEM.md  Font.cpp  Font.hpp  FontFT.cpp  FontFT.hpp  FontGlut.cpp  FontGlut.hpp  FontWin32.cpp  FontWin32.hpp  Image.cpp  Image.hpp  ImagePNG.cpp  ImagePNG.hpp  Jamfile  SaveUnder.cpp  SaveUnder.hpp  StrueTypeFont.cpp  StrueTypeFont.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  box.hpp  box_concepts.hpp  box_io.hpp  color.hpp  color_io.hpp  direction.hpp  direction_io.hpp  drawing.cpp  drawing.hpp  (+17 more)
infovis/drawing/colors/: CMakeLists.txt  Jamfile  cmy.hpp  detail.hpp  grey.cpp  grey.hpp  hsb.cpp  hsb.hpp  hvc.cpp  hvc.hpp  rgb.hpp  uvY.cpp  uvY.hpp  xyz.cpp  xyz.hpp
infovis/drawing/font_backend/: struetype.h
infovis/drawing/fonts/: ProFont_LICENSE
infovis/drawing/inter/: CMakeLists.txt  DefaultManagerIdle.cpp  DefaultManagerIdle.hpp  Event.hpp  EventCodes.cpp  EventCodes.hpp  Field.cpp  Field.hpp  Interactor.cpp  Interactor.hpp  Interactor3States.cpp  Interactor3States.hpp  InteractorEnterLeave.cpp  InteractorEnterLeave.hpp  InteractorIdle.cpp  InteractorIdle.hpp  InteractorManager.cpp  InteractorManager.hpp  Jamfile  KeyCodeInteractor.cpp  KeyCodeInteractor.hpp  KeyCodes.hpp  KeyboardHandler.cpp  KeyboardHandler.hpp  Manager3State.cpp  Manager3State.hpp  ManagerEnterLeave.cpp  ManagerEnterLeave.hpp  ManagerIdle.cpp  ManagerIdle.hpp  MouseCodes.hpp  MouseHandler.cpp  MouseHandler.hpp  SysHandlers.cpp  SysHandlers.hpp  TimerHandler.cpp  TimerHandler.hpp
infovis/drawing/lite/: Border.cpp  Border.hpp  CMakeLists.txt  Jamfile  LabelLayout.cpp  LabelLayout.hpp  LabelLayoutRect.cpp  LabelLayoutRect.hpp  LabelLayoutSimple.cpp  LabelLayoutSimple.hpp  Layout.cpp  Layout.hpp  LayoutBox.cpp  LayoutBox.hpp  LayoutStack.cpp  LayoutStack.hpp  LayoutTable.cpp  LayoutTable.hpp  Lite.cpp  Lite.hpp  LiteBackground.cpp  LiteBackground.hpp  LiteBounded.cpp  LiteBounded.hpp  LiteBox.cpp  LiteBox.hpp  LiteButton.cpp  LiteButton.hpp  LiteColorChooser.cpp  LiteColorChooser.hpp  LiteComboBox.cpp  LiteComboBox.hpp  LiteDisplacedLabel.cpp  LiteDisplacedLabel.hpp  LiteEnterLeave.cpp  LiteEnterLeave.hpp  LiteEnterLeaveShape.cpp  LiteEnterLeaveShape.hpp  LiteFrame.cpp  LiteFrame.hpp  (+48 more)
infovis/drawing/notifiers/: BeginEnd.cpp  BeginEnd.hpp  BoundedRange.cpp  BoundedRange.hpp  CMakeLists.txt  Change.cpp  Change.hpp  Jamfile
infovis/table/: CMakeLists.txt  Jamfile  algorithm.hpp  column.cpp  column.hpp  csv_loader.cpp  csv_loader.hpp  filter.hpp  metadata.cpp  metadata.hpp  table.cpp  table.hpp  test_column.cpp  test_table.cpp
infovis/tree/: CMakeLists.txt  Jamfile  ObservableTree.cpp  ObservableTree.hpp  algorithm.hpp  bfs_visitor.hpp  dir_property_tree.cpp  dir_property_tree.hpp  dir_tree.cpp  dir_tree.hpp  export_tree_xml.cpp  export_tree_xml.hpp  numeric_prop_min_max.hpp  properties.hpp  property_tree.hpp  sum_weight_visitor.cpp  sum_weight_visitor.hpp  test_bfs_visitor.cpp  test_copy.cpp  test_dir_tree.cpp  test_property_tree.cpp  test_sum_weight_visitor.cpp  test_tree.cpp  test_vector_as_tree.cpp  test_xml_tree.cpp  tree.cpp  tree.hpp  tree_concepts.hpp  tree_traits.hpp  vector_as_tree.cpp  vector_as_tree.hpp  visitor.hpp  xml_property_tree.cpp  xml_property_tree.hpp  xml_tree.cpp  xml_tree.hpp  xmltree_tree.cpp  xmltree_tree.hpp
infovis/tree/treemap/: CMakeLists.txt  Jamfile  slice_and_dice.hpp  squarified.hpp  squarified_anim.hpp  test_treemap.cpp  treemap.hpp
infovis/tree/treemap/drawing/: CMakeLists.txt  Jamfile  border_drawer.hpp  color_drawer.hpp  debug_drawer.hpp  drawer.hpp  drawer_concepts.hpp  gl_cs_3d_drawer.hpp  gl_cs_drawer.hpp  gl_drawer.hpp  numeric_prop_color_drawer.hpp  pick_drawer.hpp  test_3d_drawer.cpp  test_gl_cs_drawer.cpp  test_gl_drawer.cpp  test_gl_pick.cpp  test_lite_drawer.cpp  test_lite_drawer2.cpp  test_lite_drawer3.cpp  weight_interpolator.hpp
tools/: dirtree.c  webtree.cpp  xml2csv.c  xml2csv.xsl
treemap2/: AnimateTree.cpp  AnimateTree.hpp  BarGraph.cpp  BarGraph.hpp  BorderDrawer.hpp  BoxDrawer.hpp  CMakeLists.txt  ColorRamp.cpp  ColorRamp.hpp  ControlsTab.cpp  ControlsTab.hpp  DynaQueries.cpp  DynaQueries.hpp  FastDrawer.cpp  FastDrawer.hpp  FastPicker.cpp  FastPicker.hpp  FileType.cpp  FileType.hpp  Jamfile  LabelTreemap.cpp  LabelTreemap.hpp  LayoutVisu.cpp  LayoutVisu.hpp  LayoutVisuSD.cpp  LayoutVisuSD.hpp  LayoutVisuSP.cpp  LayoutVisuSP.hpp  LayoutVisuSQ.cpp  LayoutVisuSQ.hpp  LitePath.cpp  LitePath.hpp  LiteRangeSliderGraph.cpp  LiteRangeSliderGraph.hpp  LiteScatterPlot.cpp  LiteScatterPlot.hpp  LiteSpeed.cpp  LiteSpeed.hpp  LiteTreemap.cpp  LiteTreemap.hpp  (+9 more)
treemap2/font_backend/: fontstash.c  fontstash.h  struetype.c
